# captain.io-back

./: .gitignore  Cargo.toml  README.md  databaseCreation.sql  game.db
src/: main.rs
src/configs/: app_state.rs  config.rs  dev.toml  prod.toml
src/constants/: constants.rs  mod.rs
src/custom_errors/: service_errors.rs  sqlite_errors.rs
src/data_access_layer/: mod.rs  player_dal.rs
src/errors/: service_errors.rs
src/models/: messages_from_clients.rs  messages_to_clients.rs  mod.rs
src/requests/: requests.rs
src/responses/: responses.rs
src/service_layer/: game_service.rs  mod.rs  player_service.rs  websocket_service.rs
src/utilities/: responses.rs
